fixed vertical spacing issue for controls

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -33,6 +33,7 @@ fieldset {border: 0}
 	background: white;
 	margin-bottom: 0;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
 }
 
 #flatWrapper {display: none;}
